--- a/collection/todo-app-angular/public/index.html
+++ b/collection/todo-app-angular/public/index.html
@@ -7,28 +7,58 @@
   <script type="text/javascript" src="/js/lib/angular.js"></script>
 </head>
 <body>
-  <div class="container" ng-controller="TodoController" ng-cloak>
-    <h1>Deployd Todos</h1>
-    <p id="empty" ng-hide="todos.length || !loaded">You don't have any todos! Add one now:</p>
-    <ul id="todos" class="unstyled">
-      <li ng-repeat="todo in todos">
-        <label class="checkbox">
-          <input type="checkbox" ng-model="todo.completed" ng-change="changeCompleted(todo)" />
-          {{todo.title}}
-        </label>
-      </li>
-    </ul>
-    <form class="form-inline">
-      <input id="todo-title" type="text" ng-model="newTodoTitle" />
-      <button id="add-btn" class="btn btn-success" ng-click="addTodo(newTodoTitle)">Add</button>
-    </form>
-    <p>
-      <a href id="remove-completed-btn" ng-click="removeCompletedItems()">Remove completed items</a>
-    </p>
-  </div>
 
-  <script type="text/javascript" src="/js/lib/jquery.js"></script>
-  <script type="text/javascript" src="/dpd.js"></script>
-  <script type="text/javascript" src="/js/todo.js"></script>
+    <div ng-view></div>
+    
+    <script type="text/javascript" src="/js/lib/jquery.js"></script>
+    <script type="text/javascript" src="/dpd.js"></script>
+    <script type="text/javascript" src="/js/todo.js"></script>
+  
+    <script type="text/ng-template" id="login.html">
+    <div class="container">
+        <form class="form-horizontal">
+            <div class="control-group">
+                <label class="control-label" for="inputEmail">Email</label>
+                <div class="controls">
+                    <input type="text" id="inputEmail" placeholder="Email" ng-model="user.username">
+                </div>
+            </div>
+            <div class="control-group">
+                <label class="control-label" for="inputPassword">Password</label>
+                <div class="controls">
+                    <input type="password" id="inputPassword" placeholder="Password" ng-model="user.password">
+                </div>
+            </div>
+            <div class="control-group">
+                </div class="controls">
+                    <button class="btn" ng-click="login(user)">Sign in</button>                    
+                </div>
+            </div>
+        </form>	
+    </div>
+    </script>
+  
+    <script type="text/ng-template" id="todo-list.html">
+        <div class="container" ng-cloak>
+            <h1>Deployd Todos</h1>
+            <button class="btn btn-danger" ng-click="logout()">Logout</button>
+            <p id="empty" ng-hide="todos.length || !loaded">You don't have any todos! Add one now:</p>
+            <ul id="todos" class="unstyled">
+                <li ng-repeat="todo in todos">
+                    <label class="checkbox">
+                        <input type="checkbox" ng-model="todo.completed" ng-change="changeCompleted(todo)" />
+                        {{todo.title}}
+                    </label>
+                </li>
+            </ul>
+            <form class="form-inline">
+                <input id="todo-title" type="text" ng-model="newTodoTitle" />
+                <button id="add-btn" class="btn btn-success" ng-click="addTodo(newTodoTitle)">Add</button>
+            </form>
+            <p>
+              <a href id="remove-completed-btn" ng-click="removeCompletedItems()">Remove completed items</a>
+            </p>
+        </div>
+    </script>
 </body>
 </html>
